# LegacyBridge

./: .clangd  CMakeLists.txt  CloudUploader.cpp  CloudUploader.h  POSWatchdog.cpp  POSWatchdog.h  README.md  main.cpp  mock_pos.csv  mock_pos.py  pos_legacy_log.csv  utils.cpp  utils.h
.cache/clangd/index/: CloudUploader.cpp.0E0FE9DABC31CC65.idx  CloudUploader.h.D14E794AE5754428.idx  POSWatchdog.cpp.3BC2CE6918175E4B.idx  POSWatchdog.h.3029516670A65DF4.idx  httplib.h.E4EF2227197C26AF.idx  json.hpp.AAD508C1B83E4709.idx  main.cpp.25C6FF9100BED7FA.idx  utils.cpp.38A91C818D75C687.idx  utils.h.64F4B5C93D4BF37E.idx
